--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,8 +1,62 @@
+@import "partials/mixins";
+@import "partials/params";
+
 .header{
+    position: relative;
     display: flex;
     flex-direction: column;
     background-blend-mode: multiply;
-   // background: url("img/Rectangle\ 3.png");
-    background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
+    background: url("img/header_bg.png");
+    z-index: 1;
     background-size: cover;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background:linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
+        z-index: -1;
+    }
+
+    &__title{
+        margin: auto;
+        margin-top: 180px;
+        margin-bottom: 40px;
+        text-transform: uppercase;
+        font-size: 72px;
+        color: #fff;
+    }
+
+    &__subtitle{
+        text-align: center;
+        font-size: 24px;
+        height: 130px;
+        width: 500px;
+        margin: auto;
+        color: #fff;
+    }
+
+    &__button{
+        margin: auto;
+        margin-top: 50px;
+        margin-bottom: 180px;
+        width: 160px;
+        height: 50px;
+        border: 1px solid #fff;
+        border-radius: 5px;
+        background-color: #fff;
+        text-transform: uppercase;
+        cursor: pointer;
+        color: $rose;
+
+        &:hover{
+            color: rgb(34, 28, 88);
+            border-color: rgb(34, 28, 88);;
+            transition:  0.2s linear;
+        }
+       
+    }
 }
