--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -14,10 +14,13 @@
     &__logo{
         margin: auto;
         font-weight: bold;
+        font-size: 22px;
         
+
         &--icon{
-            width: 50px;
-            height: 50px;
+            width: 30px;
+            height: 20px;
+            margin: auto;
         }
     }
 
@@ -26,14 +29,52 @@
         display: flex;
         justify-content: space-between;
         margin: auto;
-        color: #ffff;
+        
     }
 
-    &__item{}
+    &__item{
+        margin: 0 10px;
+        
+        
+    }
 
-    &__link{}
+    &__link{
+        color: #ffff;
+
+        &:hover{
+            color: rgb(34, 28, 88);
+            transition: color 0.2s linear;
+        }
+    }
 
     &__login{
         margin: auto;
+        color: #000;
+        
+        &--icon{
+            width: 30px;
+            height: 20px;
+        }
+
+        &--button{
+            margin-left: 10px;
+            width: 100px;
+            height: 40px;
+            border: 1px solid #ffff;
+            border-radius: 5px;
+            background-color: transparent;
+            text-transform: uppercase;
+            color: #ffff;
+            cursor: pointer;
+
+            &:hover{
+                color: rgb(34, 28, 88);
+                border-color: rgb(34, 28, 88);
+                transition:  0.2s linear;
+            }
+        }
+        &--select{
+            background-color: transparent;
+        }
     }
 }
