--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     background-blend-mode: multiply;
-    background: url("img/header_bg.png");
+    background: url("/img/header_bg.png");
     z-index: 1;
     background-size: cover;
 
