--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,11 @@
 @import "partials/mixins";
+@import "partials/params";
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 html,body{
 @include clear;
 width: 100%;
+font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6{
