--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,23 +1,12 @@
-@import "partials/mixins";
-@import "partials/params";
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-html,body{
-@include clear;
-width: 100%;
-font-family: 'Roboto', sans-serif;
-}
+@import "partials/mixins";
+@import "partials/params";
 
-h1, h2, h3, h4, h5, h6{
-@include clear; 
-}
+@import './base.scss';
+@import './header.scss';
+@import './nav.scss';
+@import './features.scss';
+@import './contact.scss';
 
-a{
-    text-decoration: none;
-}
-
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    
-}
+@import './media.scss';
