--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -31,7 +31,7 @@
         text-align: center;
         font-size: 24px;
         height: 130px;
-        width: 500px;
+        max-width: 500px;
         margin: auto;
         color: #fff;
     }
