--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -10,7 +10,7 @@
             width: 100%;
             max-width: 500px;
             padding: 20px;
-            background-color: rgb(227, 95, 69);
+            background-color: rgb(252, 83, 50);
             transition: transform 0.2s linear;
             
 
@@ -46,12 +46,32 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 50px;
+        margin-bottom: 100px;
+
+        &__head{
+            max-width: 445px;
+            height: 160px;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        
+        &__title{
+            font-size: 30px;
+            margin-bottom: 25px;
+    
+        }
+        
+        &__text{
+            font-size: 14px;
+        }        
     }
 
 
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 767px) {
 
     .features {
         &__wrapper {
@@ -59,5 +79,109 @@
             gap: 30px;
             align-items: center;
         }
+
+        &__title {
+            margin: auto;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            font-size: 32px;
+        }
     }
+
+    .header{
+        
+    
+        &__title{
+            margin: auto;
+            margin-top: 80px;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            font-size: 50px;
+            color: #fff;
+        }
+    
+        &__subtitle{
+            text-align: center;
+            font-size: 18px;
+            height: 80px;
+            max-width: 500px;
+            margin: auto;
+            color: #fff;
+        }
+    
+        &__button{
+            margin: auto;
+            margin-top: 25px;
+            margin-bottom: 70px;
+            width: 120px;
+            height: 40px;
+                                   
+        }
+    }
+
+    .contact{
+        margin-top: 50px;
+        margin-bottom: 100px;
+        
+        &__head{
+            max-width: 445px;
+            height: 160px;            
+        }
+        
+        &__title{
+            font-size: 30px;
+            margin-bottom: 25px;    
+        }
+        
+        &__text{
+            font-size: 14px;
+        }        
+                       
+        &__form{
+            margin:0;
+            padding: 0;
+            width: 400px;
+            height: 305px;      
+        } 
+    
+        &-form{
+            :nth-child(1){
+                margin-right: 20px;
+            } 
+    
+                &__input{
+                max-width: 255px;
+                max-height: 60px;
+                padding: 30px;
+                margin-bottom: 15px;
+                
+    
+                        
+                &--tel{
+                    max-width: 540px;
+                    max-height: 60px;
+                      }
+                    }
+    
+            &__select{
+                &__selection{
+                width: 540px;
+                height: 60px !important;   
+                padding: 15px 25px;     
+                                                         
+                }
+                    
+            }
+                         
+                 &__button{
+                margin-top: 0;
+                }
+               
+                }}
+
+}
+
+@media screen and (max-width: 480px) {
+
+   
 }
