добавил запрос под мобильное разрешение

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -59,7 +59,7 @@
 
         &__select{
             &__selection{
-            max-width: 540px;
+            width: 540px;
             height: 60px !important;   
             padding: 15px 25px;     
             border-radius: 6px;
