--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -140,7 +140,7 @@
         &__form{
             margin:0;
             padding: 0;
-            width: 400px;
+            width: 440px;
             height: 305px;      
         } 
     
@@ -150,22 +150,22 @@
             } 
     
                 &__input{
-                max-width: 255px;
-                max-height: 60px;
+                width: 200px;
+                height: 50px;
                 padding: 30px;
                 margin-bottom: 15px;
                 
     
                         
                 &--tel{
-                    max-width: 540px;
-                    max-height: 60px;
+                    width: 420px;
+                    max-height: 50px;
                       }
                     }
     
             &__select{
                 &__selection{
-                width: 540px;
+                width: 420px;
                 height: 60px !important;   
                 padding: 15px 25px;     
                                                          
@@ -183,5 +183,148 @@
 
 @media screen and (max-width: 480px) {
 
-   
+    .header{
+    
+    
+        &__title{
+           
+            margin-top: 30px;
+            margin-bottom: 15px;
+           
+            font-size: 30px;
+            color: #fff;
+        }
+    
+        &__subtitle{
+            font-size: 14px;
+            height: 80px;
+                     
+        }
+    
+        &__button{
+            margin-top: 15px;
+            margin-bottom: 30px;
+            width: 120px;
+            height: 40px;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            background-color: #fff;
+            text-transform: uppercase;
+            cursor: pointer;
+            color: $rose;
+    
+            &:hover{
+                color: rgb(34, 28, 88);
+                border-color: rgb(34, 28, 88);;
+                transition:  0.2s linear;
+            }
+           
+        }
+    }
+
+    .features{
+
+        &__title {
+            font-size: 25px;
+        }
+        &__wrapper {
+        padding-bottom: 50px;
+    }
+
+}
+
+    .contact{
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 50px;
+        margin-bottom: 300px;
+        
+        &__head{
+            max-width: 300px;
+            height: 160px;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        
+        &__title{
+            font-size: 25px;
+            margin-bottom:15px;
+    
+        }
+        
+        &__text{
+            font-size: 14px;
+        }        
+           
+        
+    
+        &__form{
+           
+            width: 260px;
+            height: 305px;      
+        } 
+    
+        &-form{
+            :nth-child(1){
+                margin-right:0;
+            } 
+    
+                &__input{
+                width: 255px;
+                height: 30px;
+                padding: 20px;
+                border-radius: 6px;
+                margin-bottom: 5px;
+                border: 1px solid #333 ;
+                box-sizing: border-box;
+    
+                        
+                &--tel{
+                    width: 255px;
+                    height: 40px;
+                      }
+                    }
+    
+            &__select{
+                &__selection{
+                width: 255px;
+                height: 40px !important;   
+                padding: 10px 25px;     
+                border-radius: 6px;
+                                            
+    
+                }
+    
+                &__dropdown {
+                    background-color:#fff;
+                    color: #000;
+                    .select2-results {
+                        &__option {
+                            &--highlighted {
+                                background-color:$rose !important;
+                                
+                            }
+                        
+                        }
+                    }
+                }
+            }
+                      
+    
+                 &__button{
+                margin-top: 0;
+               
+                width: 160px;
+                height: 40px;
+                border: 1px solid #fff;
+                border-radius: 5px;
+                background-color: $rose;
+                text-transform: uppercase;
+                cursor: pointer;
+                color: #fff;
+                        
+               }
+               
+                }}
 }
