--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -27,95 +27,92 @@
        
     
 
-    &__form{
-        display: flex;
-        flex-wrap: wrap;
-        padding: 0;
-        
+    &__form{        
         width: 540px;
         height: 305px;      
     } 
+}
 
-    &-form{
-        :nth-child(1){
-            margin-right: 20px;
-        } 
+.contact-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0;
 
-            &__input{
-            width: 255px;
-            height: 60px;
-            padding: 30px;
-            border-radius: 6px;
-            margin-bottom: 30px;
-            border: 1px solid #333 ;
-            box-sizing: border-box;
+    &__input {
+        flex-basis: calc(50% - 10px);
+        height: 60px;
+        padding: 30px;
+        border-radius: 6px;
+        margin-bottom: 30px;
+        border: 1px solid #333 ;
+        box-sizing: border-box;
 
-                    
-            &--tel{
-                width: 540px;
-                height: 60px;
-                  }
-                }
+                
+        &--tel {
+            flex-basis: 100%;
+        }
+    }
 
-        &__select{
-            &__selection{
-            width: 540px;
-            height: 60px !important;   
-            padding: 15px 25px;     
-            border-radius: 6px;
+    &__select {
+        &__selection {
+        width: 540px;
+        height: 60px !important;   
+        padding: 15px 25px;     
+        border-radius: 6px;
 
-             & .select2{  
+            & .select2{  
                 &__selection{
-
                     &--single{
                         background-color: aqua;  
-                    }
-                }
-               
-             }
-                     
-
-            }
-
-            &__dropdown {
-                background-color:#fff;
-                color: #000;
-                .select2-results {
-                    &__option {
-                        &--highlighted {
-                            background-color:$rose !important;
-                            
-                        }
-                    
                     }
                 }
             }
         }
 
-       
-       
+        &__dropdown {
+            background-color:#fff;
+            color: #000;
+            .select2-results {
+                &__option {
+                    &--highlighted {
+                        background-color:$rose !important;
+                        
+                    }
+                
+                }
+            }
+        }
+    }
 
-             &__button{
-            margin-top: 30px;
-           
-            width: 160px;
-            height: 50px;
-            border: 1px solid #fff;
-            border-radius: 5px;
-            background-color: $rose;
-            text-transform: uppercase;
-            cursor: pointer;
-            color: #fff;
-            
-    
-            &:hover{
-                color: rgb(34, 28, 88);
-                border-color: rgb(34, 28, 88);
-                transition:  0.2s linear;
-            }}
-           
-            }}
+   
+   
 
+         &__button {
+        margin-top: 30px;
+       
+        width: 160px;
+        height: 50px;
+        border: 1px solid #fff;
+        border-radius: 5px;
+        background-color: $rose;
+        text-transform: uppercase;
+        cursor: pointer;
+        color: #fff;
         
-               
-    
+
+        &:hover{
+            color: rgb(34, 28, 88);
+            border-color: rgb(34, 28, 88);
+            transition:  0.2s linear;
+        }}
+       
+}
+
+.select2-selection__arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px !important;
+    height: 60px !important;
+}
