--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,7 +1,7 @@
 @import "partials/mixins";
 @import "partials/params";
 
-.nav{
+.nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,19 +10,6 @@
     height: 100px;
     text-transform: uppercase;
     color: #ffff;
-    
-    &-logo {
-        margin-left: 0;
-        font-weight: bold;
-        font-size: 22px;
-        
-
-        &__icon{
-            width: 30px;
-            height: 20px;
-            margin: auto;
-        }
-    }
 
     &__wrapper {
         display: flex;
@@ -30,24 +17,12 @@
         justify-content: space-between
     }
 
-    &__toggle {
-        display: none;
-        width: 30px;
-        height: 30px;
-    }
-
-    &__menu{
+    &__menu {
         @include clear-list;
         display: flex;
         justify-content: space-between;
-        margin: auto;
-        
-    }
-
-    &__item{
-        margin: 0 10px;
-        
-        
+        gap: 20px;
+        margin-right: 20px;
     }
 
     &__link{
@@ -59,35 +34,65 @@
         }
     }
 
-    &__login{
+    &__login {
         margin: auto;
-            }
-      &-login{  
-        
-        
-        &__button{
-            margin-left: 20px;
-            width: 100px;
-            height: 30px;
-            border: 1px solid #ffff;
-            border-radius: 5px;
-            background-color: transparent;
-            text-transform: uppercase;
-            color: #ffff;
-            cursor: pointer;
+    }
 
-            &:hover{
-                color: rgb(34, 28, 88);
-                border-color: rgb(34, 28, 88);
-                transition:  0.2s linear;
-            }
+    &__open {
+        display: none;
+    }
+
+    &__close {
+        display: none;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+}
+
+.nav-logo { 
+    &__icon{
+        width: 30px;
+        height: 20px;
+    }
+
+    &__title {
+        font-weight: bold;
+        font-size: 22px;
+        color: #ffffff;
+    }
+}
+
+.nav-toggle {    
+    &__icon {
+        width: 30px;
+        height: 30px;
+        fill: #ffffff;
+    }
+}
+
+.nav-login {
+    &__button {
+        margin-left: 20px;
+        width: 100px;
+        height: 30px;
+        border: 1px solid #ffff;
+        border-radius: 5px;
+        background-color: transparent;
+        text-transform: uppercase;
+        color: #ffff;
+        cursor: pointer;
+
+        &:hover{
+            color: rgb(34, 28, 88);
+            border-color: rgb(34, 28, 88);
+            transition:  0.2s linear;
         }
-        &__select{
-            background-color: transparent;
-            
-        }
+    }
 
-
+    &__select{
+        background-color: transparent;
+        
     }
 }
 
