--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -39,7 +39,7 @@
         }
     }
 
-    .contact{
+    .contact {
 
         flex-direction: column;
         justify-content: center;
@@ -117,7 +117,7 @@
         }
     }
 
-    .contact{
+    .contact {
         margin-top: 50px;
         margin-bottom: 100px;
         
@@ -135,48 +135,35 @@
             font-size: 14px;
         }        
                        
-        &__form{
+        &__form {
             margin:0;
-            padding: 0;
-            width: 440px;
-            height: 305px;      
-        } 
-    
-        &-form{
-            :nth-child(1){
-                margin-right: 20px;
-            } 
-    
-                &__input{
-                width: 200px;
-                height: 50px;
-                padding: 30px;
-                margin-bottom: 15px;
-                
-    
-                        
-                &--tel{
-                    width: 420px;
-                    max-height: 50px;
-                      }
-                    }
-    
-            &__select{
-                &__selection{
-                width: 420px;
-                height: 60px !important;   
-                padding: 15px 25px;     
-                                                         
-                }
-                    
-            }
-                         
-                 &__button{
-                margin-top: 0;
-                }
-               
-                }}
+            padding-left: 20px;
+            padding-right: 20px;
+            width: 100%;     
+        }
+    }
 
+    .contact-form {
+        &__input {
+            flex-basis: 100%;
+            height: 50px;
+            padding: 30px;
+            margin-bottom: 15px;
+        }
+                     
+        &__button{
+            margin-top: 0;
+        }
+           
+    }
+
+    .contact-form-select{
+        &__selection {
+            width: 100%;
+            height: 60px !important;   
+            padding: 15px 25px;                                            
+        }      
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -253,15 +240,7 @@
         
         &__text{
             font-size: 14px;
-        }        
-           
-        
-    
-        &__form{
-           
-            width: 260px;
-            height: 305px;      
-        } 
+        }
     
         &-form{
             :nth-child(1){
