--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,4 @@
-.header{
+.header {
     padding: 0 15px;
     position: relative;
     display: flex;
@@ -8,17 +8,17 @@
     z-index: 1;
 
     &::before {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background:linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
+        background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
         z-index: -1;
     }
 
-    &__title{
+    &__title {
         margin: auto;
         margin-top: 180px;
         margin-bottom: 40px;
@@ -27,7 +27,7 @@
         color: #fff;
     }
 
-    &__subtitle{
+    &__subtitle {
         text-align: center;
         font-size: 24px;
         height: 130px;
@@ -36,7 +36,7 @@
         color: #fff;
     }
 
-    &__button{
+    &__button {
         margin: auto;
         margin-top: 50px;
         margin-bottom: 180px;
@@ -49,11 +49,10 @@
         cursor: pointer;
         color: $rose;
 
-        &:hover{
+        &:hover {
             color: rgb(34, 28, 88);
-            border-color: rgb(34, 28, 88);;
-            transition:  0.2s linear;
+            border-color: rgb(34, 28, 88);
+            transition: 0.2s linear;
         }
-       
     }
 }
