--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 @import "partials/mixins";
 @import "partials/params";
 
-@import './base.scss';
-@import './header.scss';
-@import './nav.scss';
-@import './features.scss';
-@import './contact.scss';
+@import "./base.scss";
+@import "./header.scss";
+@import "./nav.scss";
+@import "./features.scss";
+@import "./contact.scss";
 
-@import './media.scss';
+@import "./media.scss";
